5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1800_2570.log
== SUBMITION (2019-06-13 00:00:02) 
-- CODE:
from numpy import*
a = input("dalhe ai:")
for x in a:
	a = a.replace("a","")
	a = a.replace("A","")
print(a)
-- EXECUTION TIME:
1.20336
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
[-25,8,-6,10,12,13,-4,-7,-9]
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:04:02) 
-- CODE:
from numpy import*
from  math import*
v = array(eval(input("coloque ai:")))
p=1
med = sum(a)/size(a)
n = size(a)
for x in a:
	p = p*abs(x-med)
p = p**(1/n)
print(round(p,3))
-- EXECUTION TIME:
1.11233
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2570/main.py", line 5, in <module>
    med = sum(a)/size(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:04:06) 
-- CODE:
from numpy import*
from  math import*
v = array(eval(input("coloque ai:")))
p=1
med = sum(a)/size(a)
n = size(a)
for x in a:
	p = p*abs(x-med)
p = p**(1/n)
print(round(p,3))
-- EXECUTION TIME:
1.20608
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2570/main.py", line 5, in <module>
    med = sum(a)/size(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:04:28) 
-- CODE:
from numpy import*
from  math import*
v = array(eval(input("coloque ai:")))
p=1
med = sum(a)/size(a)
n = size(a)
for x in a:
	p = p*abs(x-med)
p = p**(1/n)
print(round(p,3))
-- EXECUTION TIME:
0.937476
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2570/main.py", line 5, in <module>
    med = sum(a)/size(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:05:59) 
-- CODE:
from numpy import*
from  math import*
v = array(eval(input("coloque ai:")))
p=1
med = sum(a)/size(a)
n = size(a)
for x in a:
	p = p*abs(x-med)
p = p**(1/n)
print(round(p,3))
-- EXECUTION TIME:
0.894918
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2570/main.py", line 5, in <module>
    med = sum(a)/size(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:06:40) 
-- CODE:
from numpy import*
from  math import*
v = array(eval(input("coloque ai:")))
p=1
med = sum(a)/size(a)
n = size(a)
for y in a:
	p = p*abs(y - med)
p = p**(1/n)
print(round(p,3))
-- EXECUTION TIME:
1.0579
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2570/main.py", line 5, in <module>
    med = sum(a)/size(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:06:43) 
-- CODE:
from numpy import*
from  math import*
v = array(eval(input("coloque ai:")))
p=1
med = sum(a)/size(a)
n = size(a)
for y in a:
	p = p*abs(y - med)
p = p**(1/n)
print(round(p,3))
-- EXECUTION TIME:
1.40881
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2570/main.py", line 5, in <module>
    med = sum(a)/size(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:07:03) 
-- CODE:
from numpy import*
from  math import*
v = array(eval(input("coloque ai:")))
p=1
med = sum(a)/size(a)
n = size(a)
for y in a:
	p = p*abs(y - med)
p = p**(1/n)
print(round(p,3))
-- EXECUTION TIME:
1.20772
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2570/main.py", line 5, in <module>
    med = sum(a)/size(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:07:53) 
-- CODE:
from numpy import*
from  math import*
v = array(eval(input("coloque ai:")))
p = 1
med = sum(a)/size(a)
n = size(a)
for y in a:
	p = p*abs(y - med)
p = p**(1/n)
print(round(p,3))
-- EXECUTION TIME:
1.90795
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2570/main.py", line 5, in <module>
    med = sum(a)/size(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:07:54) 
-- CODE:
from numpy import*
from  math import*
v = array(eval(input("coloque ai:")))
p = 1
med = sum(a)/size(a)
n = size(a)
for y in a:
	p = p*abs(y - med)
p = p**(1/n)
print(round(p,3))
-- EXECUTION TIME:
3.93252
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2570/main.py", line 5, in <module>
    med = sum(a)/size(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:07:55) 
-- CODE:
from numpy import*
from  math import*
v = array(eval(input("coloque ai:")))
p = 1
med = sum(a)/size(a)
n = size(a)
for y in a:
	p = p*abs(y - med)
p = p**(1/n)
print(round(p,3))
-- EXECUTION TIME:
4.77332
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2570/main.py", line 5, in <module>
    med = sum(a)/size(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:07:55) 
-- CODE:
from numpy import*
from  math import*
v = array(eval(input("coloque ai:")))
p = 1
med = sum(a)/size(a)
n = size(a)
for y in a:
	p = p*abs(y - med)
p = p**(1/n)
print(round(p,3))
-- EXECUTION TIME:
5.23102
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2570/main.py", line 5, in <module>
    med = sum(a)/size(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:07:56) 
-- CODE:
from numpy import*
from  math import*
v = array(eval(input("coloque ai:")))
p = 1
med = sum(a)/size(a)
n = size(a)
for y in a:
	p = p*abs(y - med)
p = p**(1/n)
print(round(p,3))
-- EXECUTION TIME:
3.13007
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2570/main.py", line 5, in <module>
    med = sum(a)/size(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:17:39) 
-- CODE:
from numpy import*
from  math import*
v = array(eval(input("coloque ai:")))
p = 1
med = sum(a)/size(a)
n = size(a)
for y in a:
	p = p*abs(y - med)
p = p**(1/n)
print(round(p,3))
-- EXECUTION TIME:
1.16407
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2570/main.py", line 5, in <module>
    med = sum(a)/size(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:18:27) 
-- CODE:
from numpy import*
from  math import*
a = array(eval(input("coloque ai:")))
p = 1
med = sum(a)/size(a)
n = size(a)
for y in a:
	p = p*abs(y - med)
p = p**(1/n)
print(round(p,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:18:31) 
-- CODE:
from numpy import*
from  math import*
a = array(eval(input("coloque ai:")))
p = 1
med = sum(a)/size(a)
n = size(a)
for y in a:
	p = p*abs(y - med)
p = p**(1/n)
print(round(p,3))
-- EXECUTION TIME:
1.20484
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
